--- a/Day02-W2/Quang/D01/index.html
+++ b/Day02-W2/Quang/D01/index.html
@@ -7,10 +7,10 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="styles.0e4338761429b4eb16ac.css"></head>
 
 <body>
     <app-root></app-root>
-</body>
+<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.5e0ce2c1a99c8658e3f9.js" defer></script><script src="main.05f310c8d1cff2b7b230.js" defer></script></body>
 
 </html>
